--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="nomI">Name:</string>
     <string name="desI">Description:</string>
 
+    <string name="score">Score:</string>
 
 </resources>
